# tdd-taxi-cpp-success

./: CMakeLists.txt  Dockerfile  README.md  bill.cpp  bill.h  main.cpp  ride.cpp  ride.h
.devcontainer/: Dockerfile  devcontainer.json
cmake/: CodeCoverage.cmake
src/: CMakeLists.txt  main.cpp  trip.cpp  trip.h  trip_factory.cpp  trip_factory.h  trips.cpp  trips.h
unit_test/: BillTest.cpp  CMakeLists.txt  RideTest.cpp  TripFactoryTest.cpp  TripTest.cpp  TripsTest.cpp
